--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,8 @@ jobs:
     - name: Run Test
       run: node fizzbuzz.js | tr -d '\r' > /tmp/js.txt
 
+    - name: Setup Check File
+      run: cat fizzbuzz.txt | tr -d '\r' > /tmp/check.txt
+
     - name: Compare output
-      run: diff -i /tmp/js.txt fizzbuzz.txt
+      run: diff -i /tmp/js.txt /tmp/check.txt
